force-app/main/default/objects/WSM_Round_Robin_Member__c/WSM_Round_Robin_Member__c.object-meta.xml
<CustomObject>
    <description>One seat in a Round Robin Group — a user plus their rotation state (weight, last assigned, availability). Child of the group via Master-Detail so seats are deleted along with their group.</description>
    <label>Round Robin Member</label>
    <nameField>
        <displayFormat>RRM-{00000}</displayFormat>
        <label>Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>