force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Active__c.field-meta.xml
<CustomField>
    <fullName>WSM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Pause toggle for this seat. Inactive members are skipped by the eligibility pipeline without being removed from the group.</description>
    <inlineHelpText>Uncheck to pause this member without removing their seat.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>