force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Cap_Override__c.field-meta.xml
<CustomField>
    <fullName>WSM_Cap_Override__c</fullName>
    <description>Per-member override of the group's Default Member Cap for the current period. Blank inherits the group default; 0 blocks this member from new assignments.</description>
    <inlineHelpText>Overrides the group's per-period cap for this member. 0 blocks assignments; blank inherits the group default.</inlineHelpText>
    <label>Cap Override</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>