force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Group__c.field-meta.xml
<CustomField>
    <fullName>WSM_Group__c</fullName>
    <description>The Round Robin Group this seat belongs to. Deleting the group deletes its members.</description>
    <inlineHelpText>Parent group this member rotates within.</inlineHelpText>
    <label>Group</label>
    <referenceTo>WSM_Round_Robin_Group__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>