force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>WSM_Is_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this member as a pool manager for the group. Reserved for the v2.1 Group Manager permission set; has no effect on assignment logic in v2.0.</description>
    <inlineHelpText>Reserved for v2.1 pool-manager permissions. No effect on routing today.</inlineHelpText>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>