force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Last_Assigned__c.field-meta.xml
<CustomField>
    <fullName>WSM_Last_Assigned__c</fullName>
    <description>Timestamp of this member's most recent assignment. Drives Strict Rotation ordering (oldest first) and is seeded from v1 data during migration.</description>
    <inlineHelpText>Used by Strict Rotation to determine whose turn is next. Do not edit manually.</inlineHelpText>
    <label>Last Assigned</label>
    <type>DateTime</type>
</CustomField>