force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_OOO_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>WSM_OOO_Return_Date__c</fullName>
    <description>Date this member becomes eligible again. The return day itself is eligible.</description>
    <inlineHelpText>Member becomes eligible again on this date (inclusive).</inlineHelpText>
    <label>Out of Office Return</label>
    <type>Date</type>
</CustomField>