force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_OOO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>WSM_OOO_Start_Date__c</fullName>
    <description>First date this member is unavailable for assignment. Blank means no out-of-office window is active.</description>
    <inlineHelpText>First day this member is out of office and skipped by the engine.</inlineHelpText>
    <label>Out of Office Start</label>
    <type>Date</type>
</CustomField>