force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Rotation_Value__c.field-meta.xml
<CustomField>
    <fullName>WSM_Rotation_Value__c</fullName>
    <description>Internal stride position used by the Weighted algorithm. Lower values are picked next; advances by 1000/weight after each assignment. System-managed.</description>
    <inlineHelpText>System-managed stride position for the Weighted algorithm. Do not edit manually.</inlineHelpText>
    <label>Rotation Value</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>