force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>WSM_Sort_Order__c</fullName>
    <description>Admin-defined display and tie-break order for this member within the group.</description>
    <inlineHelpText>Controls display order and breaks ties when other ordering criteria are equal.</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>