force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Total_Assignments__c.field-meta.xml
<CustomField>
    <fullName>WSM_Total_Assignments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lifetime count of assignments made to this member, for display only. The engine counts from Assignment Log records for period math, not this field.</description>
    <inlineHelpText>Lifetime assignment count, for reference only.</inlineHelpText>
    <label>Total Assignments</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>