force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>WSM_Unique_Key__c</fullName>
    <description>System-generated {groupId}|{userId} key that prevents the same user from holding two active seats in the same group. Set by the member trigger, do not edit.</description>
    <inlineHelpText>System-managed uniqueness key. Do not edit.</inlineHelpText>
    <label>Unique Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>