force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_User__c.field-meta.xml
<CustomField>
    <fullName>WSM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user who occupies this seat and receives assignments when selected.</description>
    <inlineHelpText>User who receives assignments when this seat is picked.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Round Robin Members</relationshipLabel>
    <relationshipName>Round_Robin_Members</relationshipName>
    <type>Lookup</type>
</CustomField>