force-app/main/default/objects/WSM_Round_Robin_Member__c/fields/WSM_Weight__c.field-meta.xml
<CustomField>
    <fullName>WSM_Weight__c</fullName>
    <description>Relative weight used by the Weighted algorithm (stride = 1000 / weight, higher weight gets assignments more often). Blank defaults to 1 on save; must be between 1 and 100.</description>
    <inlineHelpText>Higher weight = assigned more often under the Weighted algorithm. 1-100.</inlineHelpText>
    <label>Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>