force-app/main/default/objects/WSM_Round_Robin_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WSM_Group__c</columns>
    <columns>WSM_User__c</columns>
    <columns>WSM_Active__c</columns>
    <columns>WSM_Weight__c</columns>
    <columns>WSM_Last_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>